// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReviewCard /> should renders correct <ReviewCard /> with required props 1`] = `
<div
  className="bg-white rounded text-left w-60 max-w-full overflow-hidden"
  style={
    Object {
      "boxShadow": "0px 5px 20px rgba(0, 0, 0, 0.15",
    }
  }
>
  <div
    className=""
  >
    <figure
      className="relative w-60 h-60"
      role="none"
    >
      <Image
        alt=""
        layout="fill"
        objectFit="cover"
        src="/image.jpg"
      />
    </figure>
    <div
      className="px-4 py-2"
    >
      <div
        className="mb-2 font-serif text-2xl font-normal text-secondary"
      >
        John Doe
      </div>
      <div
        className="text-secondary"
      >
        Test review
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReviewCard /> should renders correct <ReviewCard /> with required props and className 1`] = `
<div
  className="bg-white rounded text-left w-60 max-w-full overflow-hidden md-2"
  style={
    Object {
      "boxShadow": "0px 5px 20px rgba(0, 0, 0, 0.15",
    }
  }
>
  <div
    className=""
  >
    <figure
      className="relative w-60 h-60"
      role="none"
    >
      <Image
        alt=""
        layout="fill"
        objectFit="cover"
        src="/image.jpg"
      />
    </figure>
    <div
      className="px-4 py-2"
    >
      <div
        className="mb-2 font-serif text-2xl font-normal text-secondary"
      >
        John Doe
      </div>
      <div
        className="text-secondary"
      >
        Test review
      </div>
    </div>
  </div>
</div>
`;
